NodeJS/conf-k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tiendapc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tiendapc
  template:
    metadata:
      labels:
        app: tiendapc
        app.kubernetes.io/name: tiendapc
        app.kubernetes.io/component: service
        app.kubernetes.io/part-of: tiendapc
        app.kubernetes.io/version: 0.0.43
        app.kubernetes.io/build-version: "2.4"
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "true"
        metrics.dynatrace.com/scrape: 'true'
        metrics.dynatrace.com/path: '/metrics'
        metrics.dynatrace.com/port: '3000'
        metrics.dynatrace.com/secure: 'false'
        metrics.dynatrace.com/filter: |
          {
            "mode": "include",
            "names": [
                "tiendapc_nodejs_active_handles"
                ]
          }
    spec:
      containers:
        - name: tiendapc
          image: mnroman/tiendapc
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
      imagePullSecrets:
      - name: regcred
