NodeJS/conf-k8s/mongodb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          #env:
          #  - name: MONGO_INITDB_ROOT_USERNAME
          #    value: admin
          #  - name: MONGO_INITDB_ROOT_PASSWORD
          #    value: adminpassword
